--- a/src/TicketManagement.WebUI/TicketManagement.WebUI.csproj
+++ b/src/TicketManagement.WebUI/TicketManagement.WebUI.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.ApiDescription.Client" Version="6.0.8">
       <PrivateAssets>all</PrivateAssets>
