--- a/src/TicketManagement.ReactJS/ClientApp/package.json
+++ b/src/TicketManagement.ReactJS/ClientApp/package.json
@@ -7,26 +7,29 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "merge": "^2.1.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "oidc-client": "^1.11.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.0.2",
     "rimraf": "^3.0.2",
-    "web-vitals": "^2.1.4",                
-    "workbox-background-sync": "^6.5.3",   
-    "workbox-broadcast-update": "^6.5.3",  
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
     "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",              
-    "workbox-expiration": "^6.5.3",        
-    "workbox-google-analytics": "^6.5.3",  
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
     "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",        
-    "workbox-range-requests": "^6.5.3",    
-    "workbox-routing": "^6.5.3",           
-    "workbox-strategies": "^6.5.3",        
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
     "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
@@ -50,7 +53,7 @@
   },
   "scripts": {
     "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "rimraf ./build && react-scripts start",
+    "start": "cross-env BROWSER='msedge.exe' react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
