--- a/src/TicketManagement.ReactJS/ClientApp/package.json
+++ b/src/TicketManagement.ReactJS/ClientApp/package.json
@@ -12,6 +12,7 @@
     "oidc-client": "^1.11.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.18.6",
     "react-moment": "^1.1.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
