--- a/src/TicketManagement.ReactJS/ClientApp/package.json
+++ b/src/TicketManagement.ReactJS/ClientApp/package.json
@@ -3,62 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.6",
-    "jquery": "^3.6.0",
-    "merge": "^2.1.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
-    "oidc-client": "^1.11.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-moment": "^1.1.2",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^9.0.2",
-    "rimraf": "^3.0.2",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.3",
-    "workbox-broadcast-update": "^6.5.3",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-google-analytics": "^6.5.3",
-    "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-range-requests": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
-  },
-  "devDependencies": {
-    "ajv": "^8.11.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.14.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "nan": "^2.15.0",
-    "typescript": "^4.6.3"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5"
+    "reactstrap": "^9.1.4"
   },
   "resolutions": {
     "css-what": "^5.0.1",
     "nth-check": "^3.0.1"
   },
   "scripts": {
-    "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "cross-env BROWSER='msedge.exe' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
