--- a/src/TicketManagement.ReactJS/ClientApp/package.json
+++ b/src/TicketManagement.ReactJS/ClientApp/package.json
@@ -18,7 +18,8 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^9.1.4"
+    "reactstrap": "^9.1.4",
+    "swagger-react-generator": "^2.0.7"
   },
   "resolutions": {
     "css-what": "^5.0.1",
