--- a/src/TicketManagement.WebUI/TicketManagement.WebUI.csproj
+++ b/src/TicketManagement.WebUI/TicketManagement.WebUI.csproj
@@ -8,13 +8,13 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-    <SpaProxyServerUrl>https://localhost:44414</SpaProxyServerUrl>
-    <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
+    <SpaClientUrl>https://localhost:7115</SpaClientUrl>
+    <SpaLaunchCommand>npm start</SpaLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.9" />
+    <PackageReference Include="AspNetCore.SpaYarp" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
