--- a/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
+++ b/src/TicketManagement.DataAccess/TicketManagement.DataAccess.csproj
@@ -6,14 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="8.44.0.52574">
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="8.45.0.54064">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>none</IncludeAssets>
     </PackageReference>
@@ -33,7 +30,7 @@
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))BusinessLogic.UnitTests</_Parameter1>
+      <_Parameter1>$(MSBuildProjectName.Trim("DataAccess"))UnitTests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 
