--- a/src/TicketManagement.EventManagementAPI/Properties/launchSettings.json
+++ b/src/TicketManagement.EventManagementAPI/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7162;http://localhost:5004"
+      "applicationUrl": "https://localhost:5003;http://localhost:5013"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -17,15 +17,21 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:36022",
-      "sslPort": 44353
+      "applicationUrl": "http://localhost:52080/",
+      "sslPort": 44382
     }
   }
 }
