--- a/test/TicketManagement.IntegrationTests/TicketManagement.IntegrationTests.csproj
+++ b/test/TicketManagement.IntegrationTests/TicketManagement.IntegrationTests.csproj
@@ -17,22 +17,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="TestTicketManagement.Database.dacpac" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="TestTicketManagement.Database.dacpac">
+    <Content Include="..\..\src\TicketManagement.Database\bin\Debug\TicketManagement.Database.dacpac">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.17.1" />
-    <PackageReference Include="AspNetCore.SpaYarp" Version="1.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.9" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.1" />
-    <PackageReference Include="Microsoft.SqlServer.DacFx" Version="160.6161.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Microsoft.SqlServer.DacFx" Version="160.6296.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
   </ItemGroup>
@@ -44,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="SonarAnalyzer.CSharp" Version="8.44.0.52574">
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="8.45.0.54064">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>none</IncludeAssets>
     </PackageReference>
